syntax = "proto3";

message UserRequest {
  string name = 1;
}
message UserResponse {
  string birthday = 1;
  string city = 2;
}
service UserService {
  rpc findUserInfo(UserRequest) returns (UserResponse);
}